--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="head">PokeMon Fetch API</h1>
     <div id="pokemonList"></div>
     <script src="./scripts.js"></script>
 </body>
